# playgwtc

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: Makefile  index.md.txt  requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
notebook_tests/: notebook1.ipynb  url.txt
playgwtc/: fetch_data.py  main.py  plotter.py
